fixed nav bar on ios

--- a/resources/css/styles/style.css
+++ b/resources/css/styles/style.css
@@ -31,7 +31,6 @@
     width: 90%;
     align-items: center;
     display: flex;
-    align-items: center;
     justify-content: flex-end;
     
 }
